Update with this branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test Nautobot Plugin
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [ main, dev, 6-undersøke-testing-med-nautobot-django ]
   pull_request:
     branches: [ main ]
 
