--- a/nautobot-plugin-praksis/.github/workflows/test.yml
+++ b/nautobot-plugin-praksis/.github/workflows/test.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+        run:
+            working-directory: nautobot-plugin-praksis
+            
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]  # Adjust based on Nautobot compatibility
