Update with this branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on: # yamllint disable-line rule:truthy rule:comments
     branches:
       - "main"
       - "develop"
+      - "6-undersøke-testing-med-nautobot-django"
     tags:
       - "v*"
   pull_request: ~
