--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,6 @@ jobs:
     defaults:
       run:
         working-directory: nautobot-plugin-praksis
-
     env:
       INVOKE_PRAKSIS_NHN_NAUTOBOT_LOCAL: "True"
     steps:
@@ -32,6 +31,7 @@ jobs:
         uses: "networktocode/gh-action-setup-poetry-environment@v6"
         with:
           poetry-version: "1.8.5"
+          working-directory: "nautobot-plugin-praksis"
       - name: "Linting: ruff format"
         run: "poetry run invoke ruff --action format"
   ruff-lint:
@@ -45,6 +45,7 @@ jobs:
         uses: "networktocode/gh-action-setup-poetry-environment@v6"
         with:
           poetry-version: "1.8.5"
+          working-directory: "nautobot-plugin-praksis"
       - name: "Linting: ruff"
         run: "poetry run invoke ruff --action lint"
   check-docs-build:
@@ -58,6 +59,7 @@ jobs:
         uses: "networktocode/gh-action-setup-poetry-environment@v6"
         with:
           poetry-version: "1.8.5"
+          working-directory: "nautobot-plugin-praksis"
       - name: "Check Docs Build"
         run: "poetry run invoke build-and-check-docs"
   poetry:
@@ -84,6 +86,7 @@ jobs:
         uses: "networktocode/gh-action-setup-poetry-environment@v6"
         with:
           poetry-version: "1.8.5"
+          working-directory: "nautobot-plugin-praksis"
       - name: "Linting: yamllint"
         run: "poetry run invoke yamllint"
   check-in-docker:
@@ -108,6 +111,7 @@ jobs:
         uses: "networktocode/gh-action-setup-poetry-environment@v6"
         with:
           poetry-version: "1.8.5"
+          working-directory: "nautobot-plugin-praksis"
       - name: "Constrain Nautobot version and regenerate lock file"
         env:
           INVOKE_PRAKSIS_NHN_NAUTOBOT_LOCAL: "true"
@@ -165,6 +169,7 @@ jobs:
         uses: "networktocode/gh-action-setup-poetry-environment@v6"
         with:
           poetry-version: "1.8.5"
+          working-directory: "nautobot-plugin-praksis"
       - name: "Constrain Nautobot version and regenerate lock file"
         env:
           INVOKE_PRAKSIS_NHN_NAUTOBOT_LOCAL: "true"
@@ -208,6 +213,7 @@ jobs:
         uses: "networktocode/gh-action-setup-poetry-environment@v6"
         with:
           poetry-version: "1.8.5"
+          working-directory: "nautobot-plugin-praksis"
       - name: "Check for changelog entry"
         run: |
           git fetch --no-tags origin +refs/heads/${{ github.base_ref }}:refs/remotes/origin/${{ github.base_ref }}
@@ -227,6 +233,7 @@ jobs:
         uses: "actions/setup-python@v5"
         with:
           python-version: "3.12"
+          working-directory: "nautobot-plugin-praksis"
       - name: "Install Python Packages"
         run: "pip install poetry"
       - name: "Set env"
@@ -262,6 +269,7 @@ jobs:
         uses: "actions/setup-python@v5"
         with:
           python-version: "3.12"
+          working-directory: "nautobot-plugin-praksis"
       - name: "Install Python Packages"
         run: "pip install poetry"
       - name: "Set env"
