The branch suddenly disspeared, added it back

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on: # yamllint disable-line rule:truthy rule:comments
     branches:
       - "main"
       - "develop"
+      - "6-undersøke-testing-med-nautobot-django"
     tags:
       - "v*"
   pull_request: ~
@@ -18,9 +19,6 @@ env:
 jobs:
   ruff-format:
     runs-on: "ubuntu-22.04"
-    defaults:
-      run:
-        working-directory: nautobot-plugin-praksis
     env:
       INVOKE_PRAKSIS_NHN_NAUTOBOT_LOCAL: "True"
     steps:
@@ -34,9 +32,6 @@ jobs:
         run: "poetry run invoke ruff --action format"
   ruff-lint:
     runs-on: "ubuntu-22.04"
-    defaults:
-      run:
-        working-directory: nautobot-plugin-praksis
     env:
       INVOKE_PRAKSIS_NHN_NAUTOBOT_LOCAL: "True"
     steps:
@@ -50,9 +45,6 @@ jobs:
         run: "poetry run invoke ruff --action lint"
   check-docs-build:
     runs-on: "ubuntu-22.04"
-    defaults:
-      run:
-        working-directory: nautobot-plugin-praksis
     env:
       INVOKE_PRAKSIS_NHN_NAUTOBOT_LOCAL: "True"
     steps:
@@ -66,9 +58,6 @@ jobs:
         run: "poetry run invoke build-and-check-docs"
   poetry:
     runs-on: "ubuntu-22.04"
-    defaults:
-      run:
-        working-directory: nautobot-plugin-praksis
     env:
       INVOKE_PRAKSIS_NHN_NAUTOBOT_LOCAL: "True"
     steps:
@@ -82,9 +71,6 @@ jobs:
         run: "poetry run invoke lock --check"
   yamllint:
     runs-on: "ubuntu-22.04"
-    defaults:
-      run:
-        working-directory: nautobot-plugin-praksis
     env:
       INVOKE_PRAKSIS_NHN_NAUTOBOT_LOCAL: "True"
     steps:
